finished the landing page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   go_router: ^8.0.0
   video_player: ^2.6.0
   google_fonts: ^6.2.0
+  flutter_material_design_icons: ^1.1.7447
+  font_awesome_flutter: ^10.12.0
 
 dev_dependencies:
   flutter_test:
